# master-hh-yyml-mva

./: .asetup.save  .gitignore  README.md  application.sh  classification.sh  compile_bdtg.sh  generate_requirements.py  nohup.sh  param_tuner.sh  plots.sh  requirements.txt  tf.sh  weight_test.sh
Configs/NN/: bc_0l1tau_config.yaml  bc_0l2tau_config.yaml  bc_1l0tau_config.yaml  bc_1l1tau_config.yaml  bc_2l0tau_config.yaml  mc_0l1tau_config.yaml  mc_0l2tau_config.yaml  mc_1l0tau_config.yaml  mc_1l1tau_config.yaml  mc_2l0tau_config.yaml
Configs/TRExFitter/BDTG/: 0l1tau_run2.config  1l1tau_run2.config  yyml_run2.config
Configs/TRExFitter/DNN/BC/: 0l1tau_run2.config  0l2tau_run2.config  1l0tau_run2.config  yyml_run2.config
Configs/TRExFitter/DNN/MC/: 0l1tau_run2.config  0l2tau_run2.config  1l0tau_run2.config  1l1tau_run2.config  2l_mf_run2.config  2l_run2.config
Configs/run2_configs/BDTG/: 0l2tau_run2.config  1l0tau_run2.config  2l0tau_run2.config  2l_run2.config
Configs/run2_configs/DNN/BC/: 1l1tau_run2.config  2l0tau_run2.config  2l_run2.config
Scripts/: produce_plots.ipynb  produce_plots.py  test.ipynb
Scripts/BDTG/: BDTG.C  CMakeLists.txt  HH_CV_Application.C  HH_CV_Application.h  HH_CV_Classification.C  HH_CV_Classification.h  LinkDef.h  bdtg  libbdtg_rdict.pcm
Scripts/NN/: HyperOptim.py  dnn_application.py  dnn_classification.py  neural_network.py  plots.py  produce_plots.py  produce_plots_MC.py  produce_plots_search.py
Scripts/utils/: ReadData.py  hh_dataset.py  logger.py  metrics.py  model_dict.py  timer.py
(+4 files in other folders)
